Added some more tests and played with a first outline of implicit matrix setup - want to tidy up names after this commit

--- a/solvers/ADRSolver/CMakeLists.txt
+++ b/solvers/ADRSolver/CMakeLists.txt
@@ -82,6 +82,10 @@ IF( NEKTAR_SOLVER_ADR )
     ADD_NEKTAR_TEST(Advection2D_ISO_regular_SSPRK2)
     ADD_NEKTAR_TEST(Advection2D_ISO_regular_SSPRK3)
 
+    # GJP tests
+    ADD_NEKTAR_TEST(Advection2D_Quad_GJP)
+    ADD_NEKTAR_TEST(Advection2D_Tri_GJP)
+
     # 2D continuous advection (non-conservative)
     ADD_NEKTAR_TEST(Advection_m12_Order1)
     ADD_NEKTAR_TEST(Advection_m12_Order2)
@@ -248,8 +252,8 @@ IF( NEKTAR_SOLVER_ADR )
         ADD_NEKTAR_TEST(Helmholtz3D_CubePeriodic_par)
         ADD_NEKTAR_TEST(Helmholtz3D_CubeDirichlet_par)
         ADD_NEKTAR_TEST(Helmholtz3D_CubePeriodic_RotateFace_par)
-	    ADD_NEKTAR_TEST(Advection2D_m12_DG_quad_VarP_par)
-	    ADD_NEKTAR_TEST(Advection2D_m12_DG_tri_VarP_par)
+        ADD_NEKTAR_TEST(Advection2D_m12_DG_quad_VarP_par)
+        ADD_NEKTAR_TEST(Advection2D_m12_DG_tri_VarP_par)
         ADD_NEKTAR_TEST(Advection2D_dirichlet_regular_GAUSS_LAGRANGE_10x10_MF_par)
         IF (NEKTAR_USE_HDF5)
             ADD_NEKTAR_TEST(Advection3D_m10_DG_prism_VarP_hdf)
