Added 3D version and tidied up CreateMatrix in 3D Expansiosn

--- a/solvers/ADRSolver/CMakeLists.txt
+++ b/solvers/ADRSolver/CMakeLists.txt
@@ -86,6 +86,7 @@ IF( NEKTAR_SOLVER_ADR )
     ADD_NEKTAR_TEST(Advection2D_Quad_GJP)
     ADD_NEKTAR_TEST(Advection2D_Tri_GJP)
     ADD_NEKTAR_TEST(AdvDiff_QuadTri_GJP)
+    ADD_NEKTAR_TEST(AdvDiff3D_AllElmt_GJP)
 
     # 2D continuous advection (non-conservative)
     ADD_NEKTAR_TEST(Advection_m12_Order1)
