Updated to allow for direct usage of stabilisation without specifing it as a force

--- a/solvers/IncNavierStokesSolver/CMakeLists.txt
+++ b/solvers/IncNavierStokesSolver/CMakeLists.txt
@@ -80,6 +80,7 @@ IF( NEKTAR_SOLVER_INCNAVIERSTOKES )
     ADD_NEKTAR_TEST(SM_Adj)
     ADD_NEKTAR_TEST(SM_Adj_base_file)
     ADD_NEKTAR_TEST(KovaFlow_m3)
+    ADD_NEKTAR_TEST(KovaFlow_m3_GJP)
     ADD_NEKTAR_TEST(KovaFlow_m8)
     ADD_NEKTAR_TEST(KovaFlow_m8_short_ConOBC)
     ADD_NEKTAR_TEST(KovaFlow_m8_short_ConOBC_VCSWeakPress)
