--- a/solvers/IncNavierStokesSolver/CMakeLists.txt
+++ b/solvers/IncNavierStokesSolver/CMakeLists.txt
@@ -104,6 +104,7 @@ IF( NEKTAR_SOLVER_INCNAVIERSTOKES )
     ADD_NEKTAR_TEST(Tet_Kovasnay_SubStep)
     ADD_NEKTAR_TEST(Tet_Kovasnay_HOBC)
     ADD_NEKTAR_TEST(Tet_Kovasnay_SVV_DGKer)
+    ADD_NEKTAR_TEST(Tet_Kovasnay_GJP)
     ADD_NEKTAR_TEST(Tet_channel_m3)
     ADD_NEKTAR_TEST(Tet_channel_m3_ConOBC)
     ADD_NEKTAR_TEST(Tet_channel_m3_VCSWeakPress)
