--- a/solvers/IncNavierStokesSolver/CMakeLists.txt
+++ b/solvers/IncNavierStokesSolver/CMakeLists.txt
@@ -207,6 +207,7 @@ IF( NEKTAR_SOLVER_INCNAVIERSTOKES )
             ADD_NEKTAR_TEST(Tet_channel_m8_hdf)
             ADD_NEKTAR_TEST(KovaFlow_3DH1D_P5_20modes_MVM_hdf5)
             ADD_NEKTAR_TEST(CylFlow2D_FieldConvertFilter_Hdf5)
+            ADD_NEKTAR_TEST(Tet_hdf5_multilevel_partition)
             IF (NEKTAR_USE_SCOTCH)
                 ADD_NEKTAR_TEST(CubeAllElements_ChanFlow)
             ENDIF()
