--- a/solvers/CompressibleFlowSolver/CMakeLists.txt
+++ b/solvers/CompressibleFlowSolver/CMakeLists.txt
@@ -91,6 +91,8 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
     #ADD_NEKTAR_TEST(Couette_WeakDG_LDG_MODIFIED)
     ADD_NEKTAR_TEST(Couette_WeakDG_IP_MODIFIED_IM)
     ADD_NEKTAR_TEST(Couette_WeakDG_IP_MODIFIED_IM_PRECON)
+    ADD_NEKTAR_TEST(Couette_WeakDG_IP_MODIFIED_IM_PRECON_NonDim_Pri)
+    ADD_NEKTAR_TEST(Couette_WeakDG_IP_MODIFIED_IM_PRECON_NonDim_Tet)
     ADD_NEKTAR_TEST(Couette_WeakDG_IP_MODIFIED_Adiabatic)
     ADD_NEKTAR_TEST(Couette_WeakDG_LDG_SEM)
     ADD_NEKTAR_TEST(Couette_WeakDG_LDG_SEM_VariableMu)
@@ -125,7 +127,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
     ADD_NEKTAR_TEST(PipeFlow_NSAxisym)
     ADD_NEKTAR_TEST(hump3D_GLL)
     ADD_NEKTAR_TEST(hump3D_SEM)
-    ADD_NEKTAR_TEST(hump3D_SEM_IP)
+    ADD_NEKTAR_TEST(hump3D_SEM_IP) 
     ADD_NEKTAR_TEST(Rarefaction_vanderWaals LENGTHY)
     ADD_NEKTAR_TEST(MMS_Compressible_Poiseuille_testIP)
     ADD_NEKTAR_TEST(ShockTube_2D_mixedMesh_Lap)
