--- a/cmake/Nektar++Config.cmake.in
+++ b/cmake/Nektar++Config.cmake.in
@@ -21,6 +21,8 @@
 # Example Use:
 #  FIND_PACKAGE(Nektar++ REQUIRED)
 #  ADD_DEFINITIONS(${NEKTAR++_DEFINITIONS})
+#  If you're on a system with CMake >=3.12, also add this ADD_COMPILE_DEFINITIONS line:
+#  ADD_COMPILE_DEFINITIONS(${NEKTAR++_GENERATED_DEFINITIONS})
 #  INCLUDE_DIRECTORIES(${NEKTAR++_INCLUDE_DIRS} ${NEKTAR++_TP_INCLUDE_DIRS})
 #  LINK_DIRECTORIES(${NEKTAR++_LIBRARY_DIRS} ${NEKTAR++_TP_LIBRARY_DIRS})
 #  TARGET_LINK_LIBRARIES(${ProjectName} ${NEKTAR++_LIBRARIES} ${NEKTAR++_TP_LIBRARIES})
@@ -33,6 +35,7 @@ SET(NEKTAR++_ROOT_DIR "@CMAKE_INSTALL_PREFIX@")
 SET(NEKTAR++_INCLUDE_DIRS "@NEKTAR_INCLUDE_DIST_DIR@")
 SET(NEKTAR++_LIBRARY_DIRS "${NEKTAR++_ROOT_DIR}/@NEKTAR_LIB_DIR@")
 SET(NEKTAR++_DEFINITIONS @NEKTAR_DEFINITIONS@)
+SET(NEKTAR++_GENERATED_DEFINITIONS @NEKTAR_GENERATED_DEFINITIONS@)
 SET(NEKTAR++_LIBRARIES @NEKTAR++_LIBRARIES@)
 
 SET(NEKTAR++_TP_INCLUDE_DIRS "@NEKTAR_INCLUDE_DIR@")
