More tidy & compressible flow tests

--- a/solvers/CompressibleFlowSolver/CMakeLists.txt
+++ b/solvers/CompressibleFlowSolver/CMakeLists.txt
@@ -132,6 +132,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
     ADD_NEKTAR_TEST(MMS_Compressible_Poiseuille_testIP)
     ADD_NEKTAR_TEST(ShockTube_2D_mixedMesh_Lap)
     ADD_NEKTAR_TEST(TimeDependentAbsorption)
+    ADD_NEKTAR_TEST(Movement_fixed_couette)
 
     IF (NEKTAR_USE_MPI)
         #ADD_NEKTAR_TEST(Perturbation_M05_square_CBC_par LENGTHY)
@@ -147,6 +148,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
         # disabled as intermittently fails
         #ADD_NEKTAR_TEST(Couette_WeakDG_LDG_Exact_par)
         ADD_NEKTAR_TEST(Couette_WeakDG_IP_MODIFIED_IM_par)
+        ADD_NEKTAR_TEST(Movement_fixed_couette_par)
     ENDIF (NEKTAR_USE_MPI)
 
     IF (NEKTAR_USE_FFTW)
