--- a/solvers/ADRSolver/CMakeLists.txt
+++ b/solvers/ADRSolver/CMakeLists.txt
@@ -225,6 +225,8 @@ IF( NEKTAR_SOLVER_ADR )
     ADD_NEKTAR_TEST(Movement_fixed_interfaces232_dirichlet)
     ADD_NEKTAR_TEST(Movement_fixed_interfaces232_periodic)
     ADD_NEKTAR_TEST(Movement_fixed_3D_Hex41)
+    ADD_NEKTAR_TEST(Movement_fixed_2D_curved_quads)
+    ADD_NEKTAR_TEST(Movement_fixed_2D_varied)
 
     IF (NEKTAR_USE_FFTW)
         ADD_NEKTAR_TEST(Helmholtz_3DHomo1D_FFT)
@@ -265,6 +267,9 @@ IF( NEKTAR_SOLVER_ADR )
         ADD_NEKTAR_TEST(Advection2D_dirichlet_regular_GAUSS_LAGRANGE_10x10_MF_par)
         ADD_NEKTAR_TEST(Movement_fixed_interfaces232_periodic_par)
         ADD_NEKTAR_TEST(Movement_fixed_3D_Hex41_par)
+        ADD_NEKTAR_TEST(Movement_fixed_3D_Hex_3zones_Periodic_par)
+        ADD_NEKTAR_TEST(Movement_fixed_3D_stacked_cylinders_curved_par)
+        ADD_NEKTAR_TEST(Movement_fixed_2D_varied_par)
         IF (NEKTAR_USE_HDF5)
             ADD_NEKTAR_TEST(Advection3D_m10_DG_prism_VarP_hdf)
         ENDIF()
