--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,18 @@
+workflow:
+  rules:
+    # Run pipeline on tags for the main project
+    - if: $CI_COMMIT_TAG && $CI_PROJECT_PATH == "ccantwel/nektar-ci-test"   
+    # Run pipeline on the default branch for the main project
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PROJECT_PATH == "ccantwel/nektar-ci-test"                                                       
+    # Run pipeline on merge requests only
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"   
+    # DO NOT run pipeline if WIP
+    - if: $CI_MERGE_REQUEST_TITLE =~ /^WIP:.*/ 
+      when: never 
+    # DO NOT run pipeline if Draft
+    - if: $CI_MERGE_REQUEST_TITLE =~ /^Draft:.*/ 
+      when: never 
+
 stages:
   - build-env-default
   - build-env-full
