--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,14 +4,14 @@ workflow:
     - if: $CI_COMMIT_TAG && $CI_PROJECT_PATH == "nektar/nektar"
     # Run pipeline on the default branch for the main project
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PROJECT_PATH == "nektar/nektar"
-    # Run pipeline on merge requests only
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"   
     # DO NOT run pipeline if WIP
-    - if: $CI_MERGE_REQUEST_TITLE =~ /^WIP:.*/ 
-      when: never 
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TITLE =~ /^WIP:.*/
+      when: never
     # DO NOT run pipeline if Draft
-    - if: $CI_MERGE_REQUEST_TITLE =~ /^Draft:.*/ 
-      when: never 
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TITLE =~ /^Draft:.*/ 
+      when: never
+    # Other merge requests trigger pipelines
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
 
 stages:
   - build-env-default
@@ -48,8 +48,6 @@ include:
       - .gitmodules
       - .gitlab-ci.yml
       - CMakeLists.txt
-    variables:
-      - $CI_MERGE_REQUEST_TITLE !~ /^WIP:.*/
 
 .build-env-template: &build-env-template
   <<: *execution-conditions
