--- a/utilities/FieldConvert/CMakeLists.txt
+++ b/utilities/FieldConvert/CMakeLists.txt
@@ -22,6 +22,8 @@ ADD_NEKTAR_TEST(pointdatatofld)
 ADD_NEKTAR_TEST(chan3D_csv)
 ADD_NEKTAR_TEST(chan3D_pts)
 ADD_NEKTAR_TEST(chan3DH1D_meanmode)
+ADD_NEKTAR_TEST(chan3DH1D_cfl)
+ADD_NEKTAR_TEST(chan3DH1D_cfl_meanmode)
 ADD_NEKTAR_TEST(chan3DH1D_plane)
 ADD_NEKTAR_TEST(chan3DH1D_stretch)
 ADD_NEKTAR_TEST(chan3D_modp)
@@ -30,6 +32,7 @@ ADD_NEKTAR_TEST(cube_prismhex)
 ADD_NEKTAR_TEST(cube_prismhex_range)
 ADD_NEKTAR_TEST(chan3D_equispacedoutput)
 ADD_NEKTAR_TEST(chan3D_isocontour)
+ADD_NEKTAR_TEST(chan3D_cfl)
 ADD_NEKTAR_TEST(interpfield)
 ADD_NEKTAR_TEST(interpfieldline)
 ADD_NEKTAR_TEST(interpfield_4tri_to_1tri)
