--- a/docker/nektar-env/Dockerfile
+++ b/docker/nektar-env/Dockerfile
@@ -1,8 +1,8 @@
-FROM debian:buster-slim
+FROM debian:bullseye-slim
 
 LABEL maintainer="Nektar++ Development Team <nektar-users@imperial.ac.uk>"
 
-RUN DEBIAN_RELEASE=buster && \
+RUN DEBIAN_RELEASE=bullseye && \
     echo "deb http://deb.debian.org/debian ${DEBIAN_RELEASE} non-free" > \
         /etc/apt/sources.list.d/debian-non-free.list && \
     apt-get update && \
@@ -11,7 +11,7 @@ RUN DEBIAN_RELEASE=buster && \
     libboost-program-options-dev libboost-python-dev libboost-numpy-dev libboost-regex-dev \
     libfftw3-dev libhdf5-dev libhdf5-mpi-dev liblapack-dev liboce-foundation-dev \
     liboce-modeling-dev liboce-ocaf-dev libtet1.5-dev libtriangle-dev \
-    libtinyxml-dev mpi-default-dev petsc-dev zlib1g-dev python-numpy libptscotch-dev \
+    libtinyxml-dev mpi-default-dev petsc-dev zlib1g-dev python3-numpy libptscotch-dev \
     libarpack2-dev \
     texlive-base texlive-latex-extra texlive-science texlive-fonts-recommended texlive-pstricks \
     doxygen graphviz imagemagick
