--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ stages:
   - build-env-default
   - build-env-full
   - build-and-test
-  - compiler-warnings
+  - quality-checks
   - package-env
   - package-build
   - package-build-dev
@@ -103,7 +103,7 @@ include:
 .compiler-warning-template: &compiler-warning-template
   <<: *execution-conditions
   image: debian:10-slim
-  stage: compiler-warnings
+  stage: quality-checks
   variables:
     WARNING_REGEX: '.*warning[: ].*'
     GIT_STRATEGY: none
@@ -116,6 +116,23 @@ include:
       grep --colour=always -A 1 -B 1 -0 "$WARNING_REGEX" $LOG_FILE;
         exit 1;
       fi
+  allow_failure: true
+  timeout: 15m
+
+.clang-format-template: &clang-format-template
+  <<: *execution-conditions
+  image: debian:11-slim
+  stage: quality-checks
+  variables:
+	CL_F_VER: 11
+    TARGETS: library
+  before_script:
+    - apt-get update && apt-get install -y clang-format-$CL_F_VER git-core
+  script:
+    - echo `which clang-format-$CL_F_VER`
+    - ln -s `which clang-format-$CL_F_VER` /usr/bin/clang-format
+    - cd "$CI_PROJECT_DIR"
+    - find $TARGETS -iname "*.cpp" -o -iname "*.h" -o -iname "*.hpp" | xargs clang-format-11 --dry-run -Werror
   allow_failure: true
   timeout: 15m
 
@@ -220,7 +237,11 @@ stretch-full-warnings:
   <<: *compiler-warning-template
   needs: ["stretch-full-build-and-test"]
 
+# CODE FORMATTING
+bullseye-clang-format:
+  <<: *clang-format-template
 
+# DOCUMENTATION
 buster-documentation-build-env:
   <<: *execution-conditions
   image: docker:19.03.6
