Allow clang-format check to run straight away.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -240,6 +240,7 @@ stretch-full-warnings:
 # CODE FORMATTING
 bullseye-clang-format:
   <<: *clang-format-template
+  needs: []
 
 # DOCUMENTATION
 buster-documentation-build-env:
