--- a/docker/nektar-workbook/Dockerfile
+++ b/docker/nektar-workbook/Dockerfile
@@ -8,9 +8,9 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 USER $NB_UID
-RUN conda install --quiet --yes jupyterlab=2.3.1 cmake=3.19.1 boost=1.74.0 occt=7.4.0 gmsh=4.6.0 pyvista=0.31.3 \
+RUN mamba install --quiet --yes jupyterlab=2.3.1 cmake=3.19.1 boost=1.74.0 occt=7.4.0 gmsh=4.6.0 pyvista=0.31.3 \
         arpack=3.7.0 fftw=3.3.8 scotch=6.0.9 openmpi=4.1.0 tinyxml=2.6.2 jupyter_contrib_nbextensions=0.5.1 \
-        ptscotch=6.0.9 hdf5=1.10.6=mpi_openmpi* && \
+        ptscotch=6.0.9 hdf5=1.10.6=mpi_openmpi* vtk==9.0.1 && \
     pip install --no-cache-dir nbgitpuller itkwidgets && \
     jupyter contrib nbextension install --sys-prefix && \
     jupyter nbextension enable --sys-prefix hide_input/main && \
@@ -35,7 +35,8 @@ RUN cd /tmp/nektar && mkdir build && cd build && \
           -DNEKTAR_BUILD_TESTS=OFF -DNEKTAR_BUILD_UNIT_TESTS=OFF \
           -DNEKTAR_BUILD_DEMOS=OFF -DNEKTAR_USE_SCOTCH=ON -DNEKTAR_USE_MESHGEN=ON \
           -DNEKTAR_USE_ARPACK=ON -DNEKTAR_USE_FFTW=ON \
-          -DNEKTAR_USE_MPI=ON -DNEKTAR_USE_HDF5=ON \
+          -DNEKTAR_USE_MPI=ON -DNEKTAR_USE_HDF5=ON -DNEKTAR_USE_VTK=ON \
+          -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE \
           -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_BUILD_TYPE=Release .. && \
     make -j$(nproc) install && \
     chown -R $NB_UID:$NB_UID /tmp/nektar && \
