--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ workflow:
       when: never
     # Other merge requests trigger pipelines
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    # Manual runs
     - if: $CI_PIPELINE_SOURCE == "web"
 
 stages:
@@ -327,6 +328,13 @@ tutorials-build:
   <<: *build-env-ubuntu-template-default
   stage: build-env-full
 
+jammy-default-build-env:
+  <<: *build-env-ubuntu-template-default
+
+jammy-full_py3-build-env:
+  <<: *build-env-ubuntu-template-full
+  needs: ["jammy-default-build-env"]
+
 focal-default-build-env:
   <<: *build-env-ubuntu-template-default
 
@@ -340,6 +348,14 @@ bionic-default-build-env:
 bionic-full-build-env:
   <<: *build-env-ubuntu-template-full
   needs: ["bionic-default-build-env"]
+
+jammy-default-build-and-test:
+  <<: *build-and-test-template
+  needs: ["jammy-default-build-env"]
+
+jammy-full_py3-build-and-test:
+  <<: *build-and-test-template
+  needs: ["jammy-full_py3-build-env"]
 
 focal-default-build-and-test:
   <<: *build-and-test-template
@@ -359,6 +375,14 @@ bionic-full-build-and-test:
 
 
 # COMPILER WARNINGS
+jammy-default-warnings:
+  <<: *compiler-warning-template
+  needs: ["jammy-default-build-and-test"]
+
+jammy-full_py3-warnings:
+  <<: *compiler-warning-template
+  needs: ["jammy-full_py3-build-and-test"]
+
 focal-default-warnings:
   <<: *compiler-warning-template
   needs: ["focal-default-build-and-test"]
