--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -141,6 +141,7 @@
   variables:
     GIT_SUBMODULE_STRATEGY: normal
   script:
+    - if [ $image_name = "centos:8" ]; then sed -i -e "s|mirrorlist=|#mirrorlist=|g" -e "s|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g" /etc/yum.repos.d/CentOS-Linux-*; fi
     - yum -y upgrade
     - OS_DIST=$(echo $CI_JOB_NAME | cut -d- -f 2)
     - OS_VERSION=$(echo $CI_JOB_NAME | cut -d- -f 3)
@@ -180,6 +181,7 @@
     needs_powertools: 0
     cmake_exe: cmake
   script:
+    - if [ $image_name = "centos:8" ]; then sed -i -e "s|mirrorlist=|#mirrorlist=|g" -e "s|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g" /etc/yum.repos.d/CentOS-Linux-*; fi
     - yum -y upgrade
     - if [ "$needs_epel" -eq 1 ]; then yum install -y epel-release; fi
     - if [ "$needs_powertools" -eq 1 ]; then yum install -y dnf-plugins-core; yum config-manager --set-enabled powertools; fi
@@ -376,34 +378,34 @@ package-source-doc-deploy:
 ##
 ## Debian unstable
 ##
-package-debian-unstable-env:
-  <<: *package-env-build
+#package-debian-unstable-env:
+#  <<: *package-env-build
 
-package-debian-unstable-build:
-  <<: *package-deb-build
-  needs: ["package-debian-unstable-env"]
-  variables:
-    image_name: pkg/debian-unstable
+#package-debian-unstable-build:
+#  <<: *package-deb-build
+#  needs: ["package-debian-unstable-env"]
+#  variables:
+#    image_name: pkg/debian-unstable
 
-package-debian-unstable-test:
-  <<: *package-deb-test
-  needs: ["package-debian-unstable-build"]
-  dependencies:
-    - package-debian-unstable-build
-  variables:
-    image_name: debian:unstable
+#package-debian-unstable-test:
+#  <<: *package-deb-test
+#  needs: ["package-debian-unstable-build"]
+#  dependencies:
+#    - package-debian-unstable-build
+#  variables:
+#    image_name: debian:unstable
 
-package-debian-unstable-deploy-dev:
-  <<: *package-deb-deploy-dev
-  needs: ["package-debian-unstable-build", "package-debian-unstable-test"]
-  dependencies:
-    - package-debian-unstable-build
+#package-debian-unstable-deploy-dev:
+#  <<: *package-deb-deploy-dev
+#  needs: ["package-debian-unstable-build", "package-debian-unstable-test"]
+#  dependencies:
+#    - package-debian-unstable-build
 
-package-debian-unstable-deploy:
-  <<: *package-deb-deploy
-  needs: ["package-debian-unstable-build", "package-debian-unstable-deploy-dev"]
-  dependencies:
-    - package-debian-unstable-build
+#package-debian-unstable-deploy:
+#  <<: *package-deb-deploy
+#  needs: ["package-debian-unstable-build", "package-debian-unstable-deploy-dev"]
+#  dependencies:
+#    - package-debian-unstable-build
 
 ##
 ## Debian bullseye
