--- a/pkg/debian/unstable/rules
+++ b/pkg/debian/unstable/rules
@@ -19,6 +19,7 @@ override_dh_auto_configure:
 	-DNEKTAR_BUILD_DEMOS=OFF \
 	-DNEKTAR_BUILD_DOC=ON \
 	-DNEKTAR_BUILD_SOLVERS=ON \
+	-DNEKTAR_SOLVER_ACOUSTIC=OFF \
 	-DNEKTAR_SOLVER_DIFFUSION=OFF \
 	-DNEKTAR_SOLVER_DUMMY=OFF \
 	-DNEKTAR_SOLVER_ELASTICITY=OFF \
