--- a/docker/packaging/Dockerfile-source-doc
+++ b/docker/packaging/Dockerfile-source-doc
@@ -21,7 +21,7 @@ ARG INVALIDATE_CACHE
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get dist-upgrade -y
 
 # Patch security policy to allow PDF conversion by ImageMagick
-RUN sed -i 's/rights="none" pattern="PDF"/rights="read|write" pattern="PDF"/g' /etc/ImageMagick-6/policy.xml
+RUN sed -i 's/rights="none" pattern="\(PDF\|PS\|EPS\)"/rights="read|write" pattern="\1"/g' /etc/ImageMagick-6/policy.xml
 
 USER nektar:nektar
 WORKDIR /home/nektar
