Feature/high order vtu output

--- a/utilities/FieldConvert/CMakeLists.txt
+++ b/utilities/FieldConvert/CMakeLists.txt
@@ -21,6 +21,7 @@ ADD_NEKTAR_TEST(bfs_vort_rng)
 ADD_NEKTAR_TEST(pointdatatofld)
 ADD_NEKTAR_TEST(chan3D_csv)
 ADD_NEKTAR_TEST(chan3D_pts)
+#ADD_NEKTAR_TEST(chan3DH1D_vtu)
 ADD_NEKTAR_TEST(chan3DH1D_meanmode)
 ADD_NEKTAR_TEST(chan3DH1D_cfl)
 ADD_NEKTAR_TEST(chan3DH1D_cfl_meanmode)
@@ -73,4 +74,12 @@ ENDIF (NEKTAR_USE_MPI)
 
 IF (NEKTAR_USE_HDF5)
     ADD_NEKTAR_TEST(interpfield_hdf5)
+ENDIF()
+
+IF (NEKTAR_USE_VTK)
+    #ADD_NEKTAR_TEST(bfs_vtu_multiblock)
+    ADD_NEKTAR_TEST(chan3DH1D_vtu_legacy)
+    IF (VTK_MAJOR_VERSION GREATER_EQUAL 8)
+    #    ADD_NEKTAR_TEST(chan3D_vtu_highorder)
+    ENDIF()
 ENDIF()
