--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -203,6 +203,14 @@ bullseye-full_py3-avx2-build-and-test:
   tags:
     - avx2
 
+bullseye-full_py3-avx512-build-and-test:
+  <<: *build-and-test-template
+  needs: ["bullseye-full_py3-build-env"]
+  variables:
+    BUILD_SIMD: avx512
+  tags:
+    - avx512
+
 buster-default-build-and-test:
   <<: *build-and-test-template
   needs: ["buster-default-build-env"]
